syntax = "proto3";
package protofiles;
option go_package = "github.com/KrisjanisP/deikstra/service/protofiles";

// import "google/protobuf/empty.proto";


service Scheduler {
    rpc GetJobs(RegisterWorker) returns (stream Job) {}
    // rpc ReportWorkerStatus(stream ReportWorkerStatusRequest) returns (google.protobuf.Empty) {}
    // rpc ReportJobStatus(stream JobStatus) returns (stream JobAction) {}
}


message RegisterWorker {
    string worker_name = 1;
}

message Job {
    string job_id = 1;
    string task_name = 2;
}

// message ReportWorkerStatusRequest {
//     float cpuLoad = 0;
//     uint64 availableDiskSpace = 1;
//     uint64 availableMemory = 2;
//     // etc.

//     // List of filenames or file hashes, or whatever else you need to precisely
//     // report the presence of files.
//     repeated string haveFiles = 2;
// }
